Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
 
 <h1>Installation</h1>
 
-<p>Please read the installation manual here
-<a href="https://github.com/MKelm/pcms-advanced-community/blob/master/installation-en.txt">https://github.com/MKelm/pcms-advanced-community/blob/master/installation-en.txt</a> (english version)
-or here
-<a href="https://github.com/MKelm/pcms-advanced-community/blob/master/installation-de.txt">https://github.com/MKelm/pcms-advanced-community/blob/master/installation-de.txt</a> (german version)</p>
+<p>Please read the installation manual here <a href="http://goo.gl/z1vSE">http://goo.gl/z1vSE</a> (english version)
+or here <a href="http://goo.gl/mMOjm">http://goo.gl/mMOjm</a> (german version)</p>
+
+<h1>Alternative theme</h1>
+
+<p>The package contains a support for the papaya CMS default-theme.
+An alternative theme to this is the bootstrap-theme using
+bootstrap by Twitter, get it here <a href="http://goo.gl/CA6Vy">http://goo.gl/CA6Vy</a></p>
 
 <h1>License</h1>
 
