Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,21 @@
       <section>
         <p>This package contains modules to extend your papaya CMS community.</p>
 
-<h1>Installation</h1>
+<h1>Features</h1>
+
+<ul>
+<li>Improved surfer details page</li>
+<li>Improved surfer contacts management</li>
+<li>Messages between surfers grouped by conversations</li>
+<li>Private or public groups for surfers</li>
+<li>Image galleries for surfers and groups</li>
+<li>Comments for pages, surfers, images and groups</li>
+<li>Comments and commenters ranking</li>
+<li>Notifications by message or email</li>
+<li>Surfers list with filter and search</li>
+<li>Last activities and registrations list</li>
+<li>Intelligent caching support</li>
+</ul><h1>Installation</h1>
 
 <p>Please read the installation manual here <a href="http://goo.gl/z1vSE">http://goo.gl/z1vSE</a> (english version)
 or here <a href="http://goo.gl/mMOjm">http://goo.gl/mMOjm</a> (german version)</p>
