Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta name="google-site-verification" content="ha7TWjm-7CvLTesNZq46zK3B_cLIcS1IBJLoo-Cuvfw" />
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -30,7 +29,8 @@
       <section>
         <p>This package contains modules to extend your papaya CMS community.</p>
 
-<h1>Features</h1>
+<h1>
+<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h1>
 
 <ul>
 <li>Improved surfer details page</li>
@@ -44,18 +44,22 @@
 <li>Surfers list with filter and search</li>
 <li>Last activities and registrations list</li>
 <li>Intelligent caching support</li>
-</ul><h1>Installation</h1>
+<li>Cleanup cronjob for old cache data</li>
+</ul><h1>
+<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h1>
 
 <p>Please read the installation manual here <a href="http://goo.gl/z1vSE">http://goo.gl/z1vSE</a> (english version)
 or here <a href="http://goo.gl/mMOjm">http://goo.gl/mMOjm</a> (german version)</p>
 
-<h1>Alternative theme</h1>
+<h1>
+<a name="alternative-theme" class="anchor" href="#alternative-theme"><span class="octicon octicon-link"></span></a>Alternative theme</h1>
 
 <p>The package contains a support for the papaya CMS default-theme.
 An alternative theme to this is the bootstrap-theme using
 bootstrap by Twitter, get it here <a href="http://goo.gl/CA6Vy">http://goo.gl/CA6Vy</a></p>
 
-<h1>License</h1>
+<h1>
+<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h1>
 
 <p>This module is offered under GNU General Public Licence
 (GPL). The detailed license text can be found in gpl.txt</p>
@@ -66,6 +70,6 @@ bootstrap by Twitter, get it here <a href="http://goo.gl/CA6Vy">http://goo.gl/CA
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-
+    
   </body>
 </html>
